--- a/day10/templates/emp_list.html
+++ b/day10/templates/emp_list.html
@@ -3,18 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<style>
-table{
-	border-collapse: collapse;
+<script>
+function fn_add(){
+	location.href = "emp_add";
 }
-tr,td{
-	border : 1px solid black;
-}
-</style>
+</script>
 </head>
 <body>
 EMP_LIST<br/>
-<table>
+<table border="1">
 	<tr>
 		<td>사번</td>
 		<td>이름</td>
@@ -22,9 +19,9 @@ EMP_LIST<br/>
 		<td>주소</td>
 	</tr>
 	
-	{% for n in empList %}
+	{% for n in mylist %}
 		<tr>
-			<td><a href="././emp_detail.py?e_id={{n.e_id}}">{{n.e_id}}</a></td>
+			<td><a href="emp_detail?e_id={{n.e_id}}">{{n.e_id}}</a></td>
 			<td>{{n.e_name}}</td>
 			<td>{{n.gen}}</td>
 			<td>{{n.addr}}</td>
@@ -32,6 +29,6 @@ EMP_LIST<br/>
   	{% endfor %}
   	
 </table>
-<button id="insert">추가</button>
+<button id="insert" onclick="fn_add()">추가</button>
 </body>
 </html>
